# alfred-discord-bot

./: .gitignore  .replit  ButtonPaginator.py  CONTRIBUTING.md  Discord.py  External_functions.py  LICENSE  Learn.md  Privacy_policy.md  Procfile  README.md  Storage facility.py  Storage_facility.py  alfredworkspace.code-workspace  application.yml  commands.txt  helping_hand.py  keep_alive.py  main.py  main.sh  main_program.py  mhm.py  new.py  pyproject.toml  replit.nix  requirements.txt  setup.sh  setup_alfred.py  spotify_client.py  stuff.py  temporary_fix.py  test.py  youtube.py
.github/: CODEOWNERS
Try/: ban.py  create_embed.py  fetchuser.py  important.py  invitation.py  leave.py  leave_server.py  pig_latin.py  titanurl.py
cogs/: Application.py  Automoderate.py  BotInfo.py  ChatBot.py  Code.py  Configuration.py  Contribution.py  DataCleanup.py  Developer.py  Embed.py  FunAPI.py  Games.py  Giveaway.py  Image.py  Intercom.py  Misc.py  Mod.py  Music.py  Pokemon.py  Poll.py  Pylint.py  Roles.py  Sealfred.py  Social.py  Ticket.py  Topgg.py  Welcome.py  admin.py  ai.py  emoji.py  entar.py  entrar.py  fun.py  games.py  memes.py  polls.py  scraping.py  sudo.py  utils.py
rewrite/: __main__.py  requirements.txt
src/: Batsignal.py  Fun API.py  __main__.py  ban.py  compile.py  create_embed.py  embed.py  error.py  error_logger.py  fetchuser.py  github_stats.py  important.py  invitation.py  leave.py  mod.py  pig_latin.py  protonDB.py  test_compile.py  titanurl.py  (+4 more)
src-old/: Fun API.py  ban.py  create_embed.py  error.py  important.py  pig_latin.py  titanurl.py  wolfr.py
(+36 files in other folders)
