[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.2.0"
psutil = "^5.9.1"
beautifulsoup4 = "^4.11.1"
matplotlib = "^3.5.3"
python-dotenv = "^0.20.0"
IMDbPY = "^2022.7.9"
requests = "^2.28.1"
pylint = "^2.14.5"
aiofiles = "^0.8.0"
PyYAML = "^6.0"
emoji = "^2.0.0"
youtube_dl = "^2021.12.17"
wordcloud = "^1.8.2"
wikipedia = "^1.4.0"
nextcord = "^2.0.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"