[tool.poetry]
name = "repl_nix_alfred-discord-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
PyYAML = "^6.0"
wordcloud = "^1.8.2"
bs4 = "^0.0.1"
emoji = "^2.2.0"
aiofiles = "^23.1.0"
numpy = "^1.24.2"
wikipedia = "^1.4.0"
nextcord = "^2.4.0"
psutil = "^5.9.4"
Pillow = "^9.4.0"
Flask = "^2.2.3"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
